--- a/test/pom.xml
+++ b/test/pom.xml
@@ -32,6 +32,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
+			<artifactId>http4</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
 			<artifactId>redis</artifactId>
 		</dependency>
 		<dependency>
@@ -57,6 +61,10 @@
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>xml</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.weicoder</groupId>
+			<artifactId>quartz</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.weicoder</groupId>
