--- a/test/src/main/resources/config.properties
+++ b/test/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 memcache.server=172.28.144.212:11211
-xml.parse=jdom2
+#xml.parse=jdom2
+xml.parse=dom4j
 email.from=wdcode@qq.com
 email.password=olipgpxvkshcbgji
 email.host=smtp.qq.com
