--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -7,7 +7,7 @@
 		<version>3.3.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>redis</artifactId>
+	<artifactId>redis${suffix}</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -26,17 +26,47 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>log</artifactId>
 		</dependency>
-		
-		<dependency>
-			<groupId>com.weicoder.extend</groupId>
-			<artifactId>redis-extend</artifactId>
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-			<version>${jedis}</version>
-		</dependency>
-		 --> 
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>opt</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<suffix>-opt</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.extend</groupId>
+					<artifactId>redis-extend</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>native</id>
+			<properties>
+				<suffix></suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>redis.clients</groupId>
+					<artifactId>jedis</artifactId>
+					<version>${jedis}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<!-- 
+		<profile>
+			<id>jdk11</id>
+			<properties>
+				<suffix>-jdk11</suffix>
+			</properties>
+			<dependencies>
+
+			</dependencies>
+		</profile>
+		 -->
+	</profiles>
 </project>
