--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -4,55 +4,79 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version> 
+		<version>3.3.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>xml</artifactId>
+	<artifactId>xml${suffix}</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
-		</dependency>  
-		 
-		<dependency>
-			<groupId>com.weicoder.extend</groupId>
-			<artifactId>xml-extend</artifactId>
 		</dependency>
-		
-		<!-- 
-		<dependency>
-			<groupId>org.dom4j</groupId>
-			<artifactId>dom4j</artifactId>
-			<version>${dom4j}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom2</artifactId>
-			<version>${jdom}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.thoughtworks.xstream</groupId>
-			<artifactId>xstream</artifactId>
-			<version>${xstream}</version>
-		</dependency>
-		--> 
-		<!--
-		<dependency>
-			<groupId>com.weicoder.fork</groupId>
-			<artifactId>dom4j-jdk11</artifactId>
-			<version>${dom4j}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.weicoder.fork</groupId>
-			<artifactId>jdom2-jdk11</artifactId> 
-			<version>${jdom}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.weicoder.fork</groupId>
-			<artifactId>xstream-jdk11</artifactId>
-			<version>${xstream}</version>
-		</dependency>
-		--> 
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>opt</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<suffix>-opt</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.extend</groupId>
+					<artifactId>xml-extend</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>native</id>
+			<properties>
+				<suffix></suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.dom4j</groupId>
+					<artifactId>dom4j</artifactId>
+					<version>${dom4j}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.jdom</groupId>
+					<artifactId>jdom2</artifactId>
+					<version>${jdom2}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.thoughtworks.xstream</groupId>
+					<artifactId>xstream</artifactId>
+					<version>${xstream}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>jdk11</id>
+			<properties>
+				<suffix>-jdk11</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>dom4j-jdk11</artifactId>
+					<version>${dom4j}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>jdom2-jdk11</artifactId>
+					<version>${jdom2}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>xstream-jdk11</artifactId>
+					<version>${xstream}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
