--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -7,42 +7,66 @@
 		<version>3.3.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>dao</artifactId>
+	<artifactId>dao${suffix}</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>json</artifactId>
 		</dependency>
-		 
-		<dependency> 
-			<groupId>com.weicoder.extend</groupId> 
-			<artifactId>dao-extend</artifactId> 
-		</dependency> 
-		
-		<!--
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-			<version>${HikariCP}</version>
-		</dependency> 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql-connector-java}</version>
-		</dependency>  
-		-->
-		<!--
-		<dependency>
-			<groupId>com.weicoder.fork</groupId>
-			<artifactId>HikariCP-jdk11</artifactId>
-			<version>${HikariCP}</version>
-		</dependency> 
-		<dependency>
-			<groupId>com.weicoder.fork</groupId>
-			<artifactId>mysql-connector-java-jdk11</artifactId>
-			<version>${mysql-connector-java}</version>
-		</dependency>  
-		-->
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>opt</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<suffix>-opt</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.extend</groupId>
+					<artifactId>dao-extend</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>native</id>
+			<properties>
+				<suffix></suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.zaxxer</groupId>
+					<artifactId>HikariCP</artifactId>
+					<version>${HikariCP}</version>
+				</dependency>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+					<version>${mysql-connector-java}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>jdk11</id>
+			<properties>
+				<suffix>-jdk11</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>HikariCP-jdk11</artifactId>
+					<version>${HikariCP}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>mysql-connector-java-jdk11</artifactId>
+					<version>${mysql-connector-java}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
