--- a/email/pom.xml
+++ b/email/pom.xml
@@ -7,31 +7,56 @@
 		<version>3.3.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>email</artifactId>
+	<artifactId>email${suffix}</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
 		</dependency>
-		 
-		<dependency> 
-			<groupId>com.weicoder.extend</groupId> 
-			<artifactId>email-extend</artifactId> 
-		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-email</artifactId>
-			<version>${commons-email}</version>
-		</dependency>
-		--> 
-		<!--
-		<dependency>
-			<groupId>com.weicoder.fork</groupId>
-			<artifactId>commons-email-jdk11</artifactId>
-			<version>${commons-email}</version>
-		</dependency>
-		--> 
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>opt</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<suffix>-opt</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.extend</groupId>
+					<artifactId>email-extend</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>native</id>
+			<properties>
+				<suffix></suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-email</artifactId>
+					<version>${commons-email}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>jdk11</id>
+			<properties>
+				<suffix>-jdk11</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>commons-email-jdk11</artifactId>
+					<version>${commons-email}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
