--- a/memcache/pom.xml
+++ b/memcache/pom.xml
@@ -4,34 +4,59 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>weicoder</artifactId>
-		<version>3.3.1</version> 
+		<version>3.3.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>memcache</artifactId>
+	<artifactId>memcache${suffix}</artifactId>
 
 	<dependencies>
 		<dependency>
 			<groupId>com.weicoder</groupId>
 			<artifactId>common</artifactId>
-		</dependency> 
-		
-		<dependency>
-			<groupId>com.weicoder.extend</groupId>
-			<artifactId>memcache-extend</artifactId>
-		</dependency> 
-		 <!--
-		<dependency>
-			<groupId>com.whalin</groupId>
-			<artifactId>Memcached-Java-Client</artifactId>
-			<version>${Memcached-Java-Client}</version> 
 		</dependency>
-		-->
-		<!--
-		<dependency>
-			<groupId>com.weicoder.fork</groupId>
-			<artifactId>Memcached-Java-Client-jdk11</artifactId>
-			<version>${Memcached-Java-Client}</version> 
-		</dependency>
-		 -->
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>opt</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<suffix>-opt</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.extend</groupId>
+					<artifactId>memcache-extend</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>native</id>
+			<properties>
+				<suffix></suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.whalin</groupId>
+					<artifactId>Memcached-Java-Client</artifactId>
+					<version>${Memcached-Java-Client}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>jdk11</id>
+			<properties>
+				<suffix>-jdk11</suffix>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>Memcached-Java-Client-jdk11</artifactId>
+					<version>${Memcached-Java-Client}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
