--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<netty-all>4.1.47.Final</netty-all>
 		<mongo-java-driver>3.12.2</mongo-java-driver>
 		<jedis>3.2.0</jedis>
-		<kafka-clients>2.4.0</kafka-clients>
+		<kafka-clients>2.4.1</kafka-clients>
 		<sofa-rpc>5.6.4</sofa-rpc>
 		<tomcat-embed>9.0.31</tomcat-embed>
 		<guava>28.2-jre</guava>
@@ -42,7 +42,7 @@
 		<disruptor>3.4.2</disruptor>
 		<commons-email>1.5</commons-email>
 		<dom4j>2.1.1</dom4j>
-		<jdom>2.0.6</jdom>
+		<jdom2>2.0.6</jdom2>
 		<xstream>1.4.11.1</xstream>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
 	</properties>
