--- a/excel/pom.xml
+++ b/excel/pom.xml
@@ -18,10 +18,7 @@
 
 	<profiles>
 		<profile>
-			<id>opt</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+			<id>opt</id> 
 			<properties>
 				<suffix>-opt</suffix>
 			</properties>
@@ -34,6 +31,9 @@
 		</profile>
 		<profile>
 			<id>native</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
 				<suffix></suffix>
 			</properties>
@@ -50,16 +50,18 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<!-- 
 		<profile>
 			<id>jdk11</id>
 			<properties>
 				<suffix>-jdk11</suffix>
 			</properties>
 			<dependencies>
-
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>poi-jdk11</artifactId>
+					<version>${poi}</version>
+				</dependency>
 			</dependencies>
 		</profile>
-		 -->
 	</profiles>
 </project>
