--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -27,9 +27,7 @@
 	<profiles>
 		<profile>
 			<id>opt</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+
 			<properties>
 				<suffix>-ext</suffix>
 			</properties>
@@ -42,6 +40,9 @@
 		</profile>
 		<profile>
 			<id>native</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
 				<suffix></suffix>
 			</properties>
@@ -53,16 +54,18 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<!-- 
 		<profile>
 			<id>jdk11</id>
 			<properties>
 				<suffix>-jdk11</suffix>
 			</properties>
 			<dependencies>
-
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>kafka-clients-jdk11</artifactId>
+					<version>${kafka-clients}</version>
+				</dependency>
 			</dependencies>
 		</profile>
-		 -->
 	</profiles>
 </project>
