--- a/tomcat/pom.xml
+++ b/tomcat/pom.xml
@@ -35,9 +35,7 @@
 	<profiles>
 		<profile>
 			<id>opt</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+
 			<properties>
 				<suffix>-opt</suffix>
 			</properties>
@@ -50,6 +48,9 @@
 		</profile>
 		<profile>
 			<id>native</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
 				<suffix></suffix>
 			</properties>
@@ -66,16 +67,18 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<!-- 
 		<profile>
 			<id>jdk11</id>
 			<properties>
 				<suffix>-jdk11</suffix>
 			</properties>
 			<dependencies>
-
+				<dependency>
+					<groupId>com.weicoder.fork</groupId>
+					<artifactId>tomcat-embed-jdk11</artifactId>
+					<version>${tomcat-embed}</version>
+				</dependency>
 			</dependencies>
 		</profile>
-		 -->
 	</profiles>
 </project>
